Completado la plantilla Parte 1
1.-Secompleto para editar
2.-se completo el elimnar y listar
3.-se completo para listar alumnos y administradores

--- a/AdminPlantilla/administracion-Alumnos.html
+++ b/AdminPlantilla/administracion-Alumnos.html
@@ -163,7 +163,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0 text-dark">Administradores</h1>
+                        <h1 class="m-0 text-dark">Alumnos</h1>
                     </div><!-- /.col -->
                 </div><!-- /.row -->
             </div><!-- /.container-fluid -->
@@ -174,7 +174,7 @@
             <!-- Default box -->
             <div class="card">
                 <div class="card-header">
-                    <h3 class="card-title">Lista de Administradores</h3>
+                    <h3 class="card-title">Lista de Alumnos</h3>
 
                     <div class="card-tools">
                         <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -207,43 +207,43 @@
                         </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>
-                                    #
-                                </td>
-                                <td>
-                                    <a href="" title="Detalles"  data-toggle="modal" data-target="#modal-default">
-                                        Names and Lastname
-                                    </a>
-                                    <br/>
+                        <tr>
+                            <td>
+                                #
+                            </td>
+                            <td>
+                                <a href="" title="Detalles"  data-toggle="modal" data-target="#modal-default">
+                                    Names and Lastname
+                                </a>
+                                <br/>
 
-                                </td>
-                                <td>
-                                    Correo Admin
-                                </td>
-                                <td >
-                                    <p>
-                                        Pais Admin
-                                    </p>
-                                </td>
-                                <td >
-                                    <p>
-                                        Fecha Nacimiento Admin
-                                    </p>
-                                </td>
-                                <td class="project-actions text-right">
-                                    <a class="btn btn-info btn-sm" href="#">
-                                        <i class="fas fa-pencil-alt">
-                                        </i>
-                                        Editar
-                                    </a>
-                                    <a class="btn btn-danger btn-sm" href="#" data-toggle="modal" data-target="#modal-warning">
-                                        <i class="fas fa-trash">
-                                        </i>
-                                        Eliminar
-                                    </a>
-                                </td>
-                            </tr>
+                            </td>
+                            <td>
+                                Correo Admin
+                            </td>
+                            <td >
+                                <p>
+                                    Pais Admin
+                                </p>
+                            </td>
+                            <td >
+                                <p>
+                                    Fecha Nacimiento Admin
+                                </p>
+                            </td>
+                            <td class="project-actions text-right">
+                                <a class="btn btn-info btn-sm" href="#">
+                                    <i class="fas fa-pencil-alt">
+                                    </i>
+                                    Editar
+                                </a>
+                                <a class="btn btn-danger btn-sm" href="#" data-toggle="modal" data-target="#modal-warning">
+                                    <i class="fas fa-trash">
+                                    </i>
+                                    Eliminar
+                                </a>
+                            </td>
+                        </tr>
 
 
                         </tbody>
@@ -309,7 +309,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content bg-warning">
                         <div class="modal-header">
-                            <h4 class="modal-title">Eliminar Persona</h4>
+                            <h4 class="modal-title">Eliminar persona</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span></button>
                         </div>
@@ -326,6 +326,7 @@
                 <!-- /.modal-dialog -->
             </div>
             <!-- /.modal -->
+
         </section>
 
     </div>
