--- a/AdminPlantilla/administracion.html
+++ b/AdminPlantilla/administracion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Dashboard</title>
+    <title>Sistema de Examenes | Administracion</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -31,7 +31,7 @@
                     <a href="administracion-Administradores.html" class="nav-link">Administradores</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Alumnos</a>
+                    <a href="administracion-Alumnos.html" class="nav-link">Alumnos</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">Docentes</a>
